Fix Header style gaps

--- a/src/components/main/Header/style.scss
+++ b/src/components/main/Header/style.scss
@@ -2,7 +2,7 @@ header {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 48px;
+  gap: 35px;
   padding: 1rem 0;
   width: 97%;
 }
